--- a/todo.txt
+++ b/todo.txt
@@ -1,11 +1,11 @@
 x Spell action point recalculation
-- Update spell casting timing descriptions
+x Update spell casting timing descriptions
 - Update all lore with new combat system
 x Update unarmed combat calculations
-- Update unarmed combat lore
-- Update enchanted weapon logic (+1/+10/+1d5!)
+x Update unarmed combat lore
+x Update enchanted weapon logic (+1/+10/+1d5!)
 - Combat situations
 - Remove attack roll requirement from trick fightinng
-- Update weapon power calculation
-- Label for combat:multiplier
-
+x Update weapon power calculation
+x Label for combat:multiplier
+- Tableplop export
