--- a/todo.txt
+++ b/todo.txt
@@ -6,6 +6,9 @@ x Update unarmed combat lore
 x Update enchanted weapon logic (+1/+10/+1d5!)
 - Combat situations
 - Remove attack roll requirement from trick fightinng
-x Update weapon power calculation
+- Update weapon power calculation
 x Label for combat:multiplier
 - Tableplop export
+- select skill label
+- document weapon skill multipliers
+- list weapon types
