--- a/todo.txt
+++ b/todo.txt
@@ -13,8 +13,8 @@ x Label for combat:multiplier
 - document weapon skill multipliers
 - list weapon types
 x combat roll calculator labels for unarmed combat
-- refactor unarmed calculation to use iteration
+x refactor unarmed calculation to use iteration
 - fix weapon list actions
 - add more weapon templates
 - implement weapon list viewer
-- integrate multiplier list into skill list
+x integrate multiplier list into skill list
