--- a/todo.txt
+++ b/todo.txt
@@ -5,7 +5,7 @@ x Update unarmed combat calculations
 x Update unarmed combat lore
 x Update enchanted weapon logic (+1/+10/+1d5!)
 - Combat situations
-- Remove attack roll requirement from trick fightinng
+x Remove attack roll requirement from trick fightinng
 - Update weapon power calculation
 x Label for combat:multiplier
 - Tableplop export
